# klimawanderer

./: README.md  api.py  my_app.py  pyproject.toml  test_with_fitness_data.ipynb  utils.py
Hackday/: .gitignore  grab_data.ipynb
Hackday 2022 Gesundheit + Klima/Hackday 2022_ Gesundheit + Klima/: time_series.ipynb
Hackday 2022 Gesundheit + Klima/Hackday 2022_ Gesundheit + Klima/Temp Luftquali Risk Index HACKDAY_DLR/: DISCLAIMER.txt  README.txt
